FIX: Rydder i tester (#4575)